methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:33: error: type mismatch;
 found   : Unit
 required: Boolean
while(boule = false){
            ^MethodsReturning:36: error: not found: value haveBaggel
  test= haveBaggel()
        ^